# matam_1_2019

./: CMakeLists.txt  Makefile  README.md  country.c  country.h  eurovision.c  eurovision.h  judge.c  judge.h  list.h  namelib.h  points.c  points.h  support_functions.c  support_functions.h  דוגמה לסטודנטים.xlsx
eurovision/: eurovision.h
new_tests/: main.c  results.txt  test1.c  test10.c  test100.c  test1000.c  test101.c  test102.c  test103.c  test104.c  test105.c  test106.c  test107.c  test108.c  test109.c  test11.c  test110.c  test111.c  test112.c  test113.c  test114.c  test115.c  test116.c  test117.c  test118.c  test119.c  test12.c  test120.c  test121.c  test122.c  test123.c  test124.c  test125.c  test126.c  test127.c  test128.c  test129.c  test13.c  test130.c  test131.c  (+963 more)
new_tests/generate/: main.py
tests/: eurovisionFunctionalityTests.c  eurovisionTests.c  eurovisionTestsMain.c
tests2/: main.c
ziv_tests/: eurovisionTests.c  eurovisionTests.h  eurovisionTestsMain.c
